# conda-recipe-manager

./: .docconvert.json  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .pytest.ini  CHANGELOG.md  CONTRIBUTING.md  HOW_WE_USE_GITHUB.md  LICENSE  Makefile  README.md  environment.yaml  pixi.toml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: -maintainer--new-feature.md  01_bug-report.md  02_feature-request.md  03_project-owner-feature.md  0_bug.yml  1_feature.yml  bug-report.md  feature-request.md  project-owner-feature.md
.github/template-files/: config.yml
.github/workflows/: ci.yaml  commit_checks.yaml  docs.yaml  integration_tests.yaml  integration_tests_bot.yaml
commands/: convert.py
conda_recipe_manager/: README.md  types.py
conda_recipe_manager/cached_data/: import_to_package_names_map.json
conda_recipe_manager/commands/: README.md  bump_recipe.py  conda_recipe_manager.py  convert.py  graph.py  patch.py  rattler_bulk_build.py  update_feedstock.py
conda_recipe_manager/fetcher/: artifact_fetcher.py  base_artifact_fetcher.py  enums.py  exceptions.py  git_artifact_fetcher.py  http_artifact_fetcher.py
conda_recipe_manager/grapher/: recipe_graph.py  recipe_graph_from_disk.py  types.py
conda_recipe_manager/license/: spdx_utils.py
conda_recipe_manager/licenses/: spdx_licenses.json  spdx_utils.py
conda_recipe_manager/parser/: __init__.py  _is_modifiable.py  _node.py  _selector_info.py  _traverse.py  _types.py  _utils.py  cbc_parser.py  dependency.py  enums.py  exceptions.py  platform_types.py  recipe_parser.py  recipe_parser_convert.py  recipe_parser_deps.py  recipe_reader.py  recipe_reader_deps.py  selector_parser.py  selector_query.py  types.py  v0_recipe_formatter.py
conda_recipe_manager/utils/: typing.py
docs/: conda_recipe_manager.commands.utils.rst  conda_recipe_manager.parser.rst  conf.py  developer_guide.rst  index.rst  modules.rst  usage.rst
recipe/: meta.yaml
scripts/: README.md  parse_ci_output.py  randomly_select_recipes.py  scan_package_name_mismatch.py  update_py_import_to_pkg_cache.py
tests/: conftest.py  constants.py  file_loading.py  file_mocking.py  http_mocking.py  smoke_testing.py  test_types.py
tests/commands/: test_aggregate_cli.py  test_bump_recipe.py  test_conda_recipe_manager.py  test_convert.py  test_convert_cli.py  test_graph.py  test_main_cli.py  test_patch.py  test_rattler_bulk_build.py  test_recipe_cli.py  test_update_feedstock.py
tests/fetcher/: test_artifact_fetcher.py  test_git_artifact_fetcher.py  test_http_artifact_fetcher.py
tests/grapher/: test_recipe_graph.py  test_recipe_graph_from_disk.py  test_types.py
tests/license/: test_spdx_utils.py
tests/parser/: test_cbc_parser.py  test_dependency.py  test_pickle_integration.py  test_platform_types.py  test_recipe_parser.py  test_recipe_parser_convert.py  test_recipe_parser_deps.py  test_recipe_reader.py  test_recipe_reader_deps.py  test_selector_parser.py  test_v0_recipe_formatter.py
tests/test_aux_files/: boto.yaml  cctools-ld64.yaml  curl.yaml  dot_function_replacement.yaml  dynamic-linking.yaml  environ_get.yaml  fake_source.yaml  git-src.yaml  google-cloud-cpp.yaml  gsm-amzn2-aarch64.yaml  h5py.yaml  hash_type_replacement.yaml  huggingface_hub.yaml  libprotobuf.yaml  min_max_pin.yaml  multi-output.yaml  new_format_boto.yaml  new_format_cctools-ld64.yaml  new_format_curl.yaml  new_format_dynamic-linking.yaml  new_format_google-cloud-cpp.yaml  new_format_huggingface_hub.yaml  new_format_multi-output.yaml  new_format_pytest-pep8.yaml  new_format_rust.yaml  new_format_simple-recipe.yaml  new_format_types-toml.yaml  non_marked_multiline_summary.yaml  pip_check_only.yaml  pytest-pep8.yaml  quoted_multiline_str.yaml  regression_jinja_sub.yaml  rust.yaml  script-env.yaml  selector-match-upgrades.yaml  (+18 more)
(+1840 files in other folders)
